buildscript {
    repositories { mavenCentral() }
    dependencies {
        classpath 'org.flywaydb:flyway-database-postgresql:10.10.0'
        classpath 'org.postgresql:postgresql:42.7.4'
    }
}

plugins {
    id 'java'
    id 'org.springframework.boot' version '3.3.5'
    id 'io.spring.dependency-management' version '1.1.6'
    id 'com.diffplug.spotless' version '6.25.0'
    id 'org.flywaydb.flyway' version '10.10.0'
}

group = 'com.australiarecycling'
version = '0.0.1-SNAPSHOT'

java {
    toolchain {
        languageVersion = JavaLanguageVersion.of(21)
    }
}

configurations {
    compileOnly {
        extendsFrom annotationProcessor
    }
}

repositories {
    mavenCentral()
}

dependencies {
    implementation 'org.springframework.boot:spring-boot-starter-web'
    implementation 'org.springframework.boot:spring-boot-starter-actuator'
    implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
    implementation 'org.springframework.boot:spring-boot-starter-validation'
    implementation 'org.flywaydb:flyway-core'
    implementation 'org.flywaydb:flyway-database-postgresql'

    runtimeOnly 'org.postgresql:postgresql'
    runtimeOnly 'com.h2database:h2'

    compileOnly 'org.projectlombok:lombok'
    annotationProcessor 'org.projectlombok:lombok'

    testImplementation 'org.springframework.boot:spring-boot-starter-test'
    testRuntimeOnly 'org.junit.platform:junit-platform-launcher'
}

tasks.named('test') {
    useJUnitPlatform()
}

flyway {
    url = System.getenv('DATABASE_URL') ?: 'jdbc:postgresql://localhost:5432/recycling'
    user = System.getenv('DATABASE_USERNAME') ?: 'recycling'
    password = System.getenv('DATABASE_PASSWORD') ?: 'recycling_dev'
    locations = ['filesystem:src/main/resources/db/migration']
    baselineOnMigrate = true
    baselineVersion = '0'
}

spotless {
    java {
        googleJavaFormat('1.22.0')
        removeUnusedImports()
        trimTrailingWhitespace()
        endWithNewline()
    }
}
